fix: Set html align center

--- a/css/style.css
+++ b/css/style.css
@@ -139,3 +139,8 @@
     transform: scale(1.04);
     box-shadow: 2px 2px 6px #555;
 }
+
+html {
+    display: table;
+    margin: auto;
+}
